# simple-reading-list

./: .dockerignore  .env  .gitignore  .gitmodules  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.toshi  README.md  build.rs  makefile  toshi.Dockerfile  toshi_config.toml
admin-ui/: README.md  package.json  tsconfig.json
admin-ui/src/: App.tsx  action_creators.ts  actions.ts  api.ts  index.tsx  interface.ts  selectors.ts  state.ts  store.ts  utils.ts
admin-ui/src/components/: AuthForm.tsx  Bookmark.tsx  Input.tsx  LoadingIndicator.tsx  StatusBar.tsx  TextArea.tsx
admin-ui/src/reducers/: async.ts  index.ts  workflow.ts
admin-ui/src/styles/css/: form.css  layout.css  loading_indicator.css  status_bar.css
admin-ui/src/styles/sass/: form.scss  layout.scss  loading_indicator.scss  status_bar.scss
admin-ui/typings/parse-url/: index.d.ts
assets/: assets.json  site.536aaadd07.css  site.css
conf/: Caddyfile  __toshi_version  toshi_index.json
deployment/: .env  docker-compose.yaml
docker/: Dockerfile.caddy  Dockerfile.server  Dockerfile.toshi  run_server.sh
migrations/2019-06-01-113208_create_links/: down.sql  up.sql
migrations/2019-06-07-021109_create_admin/: down.sql  up.sql
migrations/2019-08-10-121832_is_indexed/: down.sql  up.sql
scripts/: asset_hash.py
sitejs/: LICENSE  package-lock.json  package.json  rollup.config.ts  tsconfig.json
sitejs/src/: js-enhance.ts  jsonml.ts  load_more.ts  observable.ts  paging_state_machine.ts  search_focus.ts
sitejs/test/: js-enhance.test.ts
sitejs/tools/: gh-pages-publish.ts
src/: config.rs  db.rs  error.rs  jsonml.rs  lib.rs  macros.rs  main.rs  models.rs  pagination.rs  schema.rs  utils.rs
src/search/: mod.rs  query.rs  query_parser.rs
src/templates/: asset_macro.rs  bookmark_item.rs  bookmark_jsonml.rs  mod.rs
