[package]
name = "reads"
version = "0.1.0"
authors = ["Yiran Sheng"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-rc"
actix = { version = "0.8.0-rc", features = ["http"] }
actix-rt = "0.2.2"
futures = "0.1"

serde = "1.0.92"
serde_json = "1.0.39"
serde_derive = "1.0.92"
chrono = { version = "0.4.6", features = ["serde"] }

diesel = { version = "1.4.2", features = ["postgres", "chrono", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.9.0"
