[package]
name = "reads"
version = "0.1.0"
authors = ["Yiran Sheng"]
edition = "2018"

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "create-admin-user"
path = "src/bin/create-admin-user.rs"

[dependencies]
futures = "0.1"
actix-web = "1.0.0"
actix = { version = "0.8.0-rc", features = ["http"] }
actix-rt = "0.2.2"

bcrypt = "0.4.0"
structopt = "0.2.17"
derive_more = "0.14.1"
jsonwebtoken = "6.0.1"

serde = "1.0.92"
serde_json = "1.0.39"
serde_derive = "1.0.92"
chrono = { version = "0.4.6", features = ["serde"] }

diesel = { version = "1.4.2", features = ["postgres", "chrono", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.9.0"
