[package]
name = "reads"
version = "0.1.0"
authors = ["Yiran Sheng"]
edition = "2018"
build = "build.rs"

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "create-admin-user"
path = "src/bin/create-admin-user.rs"

[[bin]]
name = "create-toshi-index"
path = "src/bin/create-toshi-index.rs"

[dependencies]
log = { version = "0.4.8", features = ["release_max_level_info"] }
env_logger = "0.6.2"

futures = "0.1"
actix-web = "1.0.0"
actix = { version = "0.8.0-rc", features = ["http"] }
actix-rt = "0.2.2"

horrorshow = "0.6.6"
pulldown-cmark = "0.5.2"
logos = "0.9.7"

rand = "0.7.0"
bcrypt = "0.4.0"
toml = "0.5.1"
itertools = "0.8.0"
lazy_static = "1.3.0"
structopt = "0.2.17"
derive_more = "0.14.1"
jsonwebtoken = "6.0.1"

serde = "1.0.92"
serde_json = { version = "1.0.39", features = ["preserve_order"] }
serde_derive = "1.0.92"
chrono = { version = "0.4.6", features = ["serde"] }

diesel = { version = "1.4.2", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8"
dotenv = "0.9.0"


[build-dependencies]
serde = "1.0.92"
serde_json = { version = "1.0.39", features = ["preserve_order"] }
serde_derive = "1.0.92"
